# etl_agent

./: .env.example  .gitignore  README.md  etl_agent_plan_v2.md  init_test_db.py  main.py  pyproject.toml  test_e2e.py
app/: config.py  logging_config.py
app/agent/: graph.py  nodes.py  schemas.py  state.py  system_prompt.py
app/api/: websocket.py
app/db/: executor.py
app/tools/: __init__.py  connection.py  inspection.py  lineage.py  mutation.py  quality.py  query.py  render.py  rich_result.py
docs/plans/: 2026-03-02-frontend-design.md  2026-03-02-lineage-graph-design.md  2026-03-02-lineage-graph-plan.md
static/: index.html
